created ui folder for chatinput and chatwindow templates

--- a/client/main.html
+++ b/client/main.html
@@ -3,18 +3,5 @@
 </head>
 
 <body>
-
+  <div>{{> chat-window}}</div>
 </body>
-
-<template name="chat-window">
-  <div id="window">
-    <ul id='messages'></ul>
-  </div>
-</template>
-
-<template name="chat-input">
-  <div id="chat-input">
-    <input type='text' />
-    <button>Send</button>
-  </div>
-</template>
