added blaze variables of chatwindow and chatinput from ui to main.html

--- a/client/main.html
+++ b/client/main.html
@@ -3,5 +3,7 @@
 </head>
 
 <body>
-  <div>{{> chat-window}}</div>
+  <div>Super Chat App</div>
+  <div>{{> chatwindow}}</div>
+  <div>{{> chatinput}}</div>
 </body>
