--- a/client/ui/chat-input.html
+++ b/client/ui/chat-input.html
@@ -1,4 +1,4 @@
-<template name="chat-input">
+<template name="chatinput">
     <div id="chat-input">
         <input type='text' />
         <button>Send</button>
