added blaze variables to chat-window to take messages in a li

--- a/client/ui/chat-window.html
+++ b/client/ui/chat-window.html
@@ -1,5 +1,9 @@
 <template name="chatwindow">
     <div id="window">
-        <ul id='messages'></ul>
+        <ul id='messages'>
+            {{#each messages}}
+            <li>{{message.author}}: {{message.content}}</li>
+            {{/each}}
+        </ul>
     </div>
 </template>
