created templates.js to add templates too, creating only one import needed to get both of the templates

--- a/client/main.html
+++ b/client/main.html
@@ -3,7 +3,7 @@
 </head>
 
 <body>
-  <div>Super Chat App</div>
+  <h4>Super Chat App</h4>
   <div>{{> chatwindow}}</div>
   <div>{{> chatinput}}</div>
 </body>
