added helpers to templates.js so to enable chat-window to receive messages

--- a/client/ui/chat-window.html
+++ b/client/ui/chat-window.html
@@ -1,7 +1,7 @@
 <template name="chatwindow">
     <div id="window">
         <ul id='messages'>
-            {{#each messages}}
+            {{#each message in messages}}
             <li>{{message.author}}: {{message.content}}</li>
             {{/each}}
         </ul>
