added .events to templates.js, on submit in chat-input form console.logs messages and pushes all new messages to that array

--- a/client/ui/chat-input.html
+++ b/client/ui/chat-input.html
@@ -1,6 +1,8 @@
 <template name="chatinput">
     <div id="chat-input">
-        <input type='text' />
-        <button>Send</button>
+        <form name="chat-input-form">
+            <input type='text' />
+            <button>Send</button>
+        </form>
     </div>
 </template>
