meteor npm install --save react react-dom

--- a/client/main.html
+++ b/client/main.html
@@ -3,7 +3,6 @@
 </head>
 
 <body>
-  <h4>Super Chat App</h4>
-  <div>{{> chatwindow}}</div>
-  <div>{{> chatinput}}</div>
+  <div id="app"></div>
+
 </body>
